# roboprec

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.toml
src/: config.rs  examples.rs  helpers.rs  lib.rs  logger.rs  main.rs
src/algorithms/: forward_kinematics.rs  mod.rs  rnea.rs  rnea_derivatives.rs
src/algorithms/robots/: helper.rs  indy7.rs  mod.rs  panda.rs  roarm_m2.rs  roarm_m3.rs  robot_info.rs
src/analysis/: analysis.rs  daisy.rs  mod.rs  real.rs
src/codegen/: c.rs  c_with_conversion.rs  codegen.rs  daisy_dsl.rs  mod.rs
src/ir/: expr.rs  helper.rs  identifier.rs  mod.rs  precision.rs  program.rs  unroll.rs
src/tests/: arithmetic_tests.rs  integration_tests.rs  macro_tests.rs  matrix_tests.rs  mod.rs  scalar_tests.rs  test_wrapper.rs  vector_tests.rs
src/tests/value_tests/: mod.rs  sine.rs
src/types/: matrix.rs  mod.rs  scalar.rs  vector.rs
src/types/opr/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
