[package]
name = "roboprec"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
fern = "0.7.1"
indexmap = "2.11.4"
log = "0.4.28"
once_cell = "1.21.3"
rug = "1.28.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.6"
clap = { version = "4.5.2", features = ["derive"] }
